integrate bootstrap and improve look and feel

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,1 +1,11 @@
 <h1>Welcome to Awesome Answers</h1>
+
+<%= link_to "New Question", new_question_path, class: "btn btn-primary" %>
+<hr>
+<% @questions.each do |question| %>
+	<p><%= link_to "#{question.id}. #{question.title}", question %></p>
+	
+	<p><%= question.body.truncate(200) %></p>
+
+	<hr>
+<% end %>
